--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,9 +1,17 @@
 {% extends "base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 
 {% load i18n %}
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block head_title %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.0/css/font-awesome.min.css">
+{% trans "Sign In" %}
+{% endblock %}
+{% block headers %}
+<title>{% trans "Sign In" %}</title>
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
 
+{% endblock headers %}
 {% block content %}
 <br>
 <br>
@@ -11,22 +19,42 @@
   <div class="row justify-content-center">
     <div class="col-lg-6">
     <br>
-      <div class="card text-center">
+      <div class="card text-center text-white bg-dark">
         <h1>{% trans "Sign In" %}</h1>
         <p>{% blocktrans %}If you have not created an account yet, then please
         <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
         <form class="login" method="POST" action="{% url 'account_login' %}">
           {% csrf_token %}
           {{ form|crispy }}
+          <span class="viewpass"><i class="fa fa-eye fa-lg" aria-hidden="true" id="eye" onclick="toggle()"></i></span>
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
           <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
           <br>
+          
           <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
         </form>
       </div>
     </div>
   </div>
 </div>
+<script>
+  var state = false;
+  function toggle(){
+    if(state){
+      document.getElementById(
+        "id_password"
+      ).setAttribute("type", "password");
+      state = false;
+    }
+    else{
+      document.getElementById(
+        "id_password"
+      ).setAttribute("type", "text");
+      state = true;
+    }
+  }
+</script>
+
 {% endblock %}
