--- a/templates/category/category_list.html
+++ b/templates/category/category_list.html
@@ -11,11 +11,21 @@
 <div class="container">
     <h1 style="color: white; text-align: center">{% trans "All niches and job positions we work with." %}</h1>
     <p>{% trans "Category info text" %}</p>
-    {% for cat in category %}
-        <div class="btn-group">
-            <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'category' cat.id %}"><h2><span class="badge bg-light text-dark">{{ cat.name }}</span></h2></a>
+    <div class="row">
+        <div class="col text-center">
+            <!-- Example single danger button -->
+            <div class="btn-group">
+                <button type="button" class="btn btn-success btn-lg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Category
+                </button>
+                <div class="dropdown-menu">
+                {% for cat in category %}
+                    <a class="dropdown-item" href="{% url 'category' cat.id %}">{{ cat.name }}</a>
+                {% endfor %}
+                </div>
+            </div>
         </div>
-    {% endfor %}
+    </div>
     <div class="card-group">
             {% for subc in subcategory %}
                 <div class="card text-center" style="border: none; padding-top: 20px">
