--- a/templates/category/worker_cvs.html
+++ b/templates/category/worker_cvs.html
@@ -11,23 +11,28 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="d-flex justify-content-center">
+                <button type="button" class="btn btn-success btn-lg">
+                    <a style="text-decoration: none; color:white; font-weight:20;" href="{% url 'company_apply' subcat.id %}">{% trans "Get offer for workers" %}</a>
+                </button>
+            </div>
             <h1>{% trans "All applyed CV's for" %}-{{ subcat }}</h1>
             <br>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="row row-cols-1 row-cols-md-4 g-4">
                 {% for c in cv %}
                     <div class="col">
-                        <a style="text-decoration: none; color:black; font-weight:50" href="{% url 'cv_detail' c.id %}">
+                        <!--<a style="text-decoration: none; color:black; font-weight:50" href="{% url 'cv_detail' c.id %}">-->
 
-                            <div class="card h-100"style="text-align:center;">
+                            <div class="card h-80" style="text-align:center; width:75%;">
                                 <div class="card-image">
-                                    <img style="width:150px; height:auto;" src="/media/cv.jpg">
+                                    <img style="width:150px; height:auto;" src="/media/cv_1.png">
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">{{ c.worker.last_name }}</h5>
                                     <p class="card-text">{{ c.worker.first_name }}</p>
                                 </div>
                             </div>
-                        </a>
+                        <!--</a>-->
                     </div>
                 {% endfor %}
             </div>
