--- a/templates/costumeuser/worker_signup.html
+++ b/templates/costumeuser/worker_signup.html
@@ -7,23 +7,23 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6">
-                <div class="card text-center">
+                <div class="card text-center text-white bg-dark">
                 <br>
                     <h1>{% trans "Sign Up as Employee" %}</h1>
 
                     <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-                    <form class="signup" id="signup_form" method="post" action="{% url 'worker_signup_view' %}">
-                        {% csrf_token %}
-                            {{ form|crispy }}
-                            {% if redirect_field_value %}
-                            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                            {% endif %}
-                            <br>
-                            <button class="btn btn-primary" type="submit">{% trans "Sign Up" %} &raquo;</button>
-                        </div>
-                    
-                    </form>
+                        <form class="signup" id="signup_form" method="post" action="{% url 'worker_signup_view' %}">
+                            {% csrf_token %}
+                                {{ form|crispy }}
+                                {% if redirect_field_value %}
+                                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                                {% endif %}
+                                <br>
+                                <button class="btn btn-primary" type="submit">{% trans "Sign Up" %} &raquo;</button>
+                            </div>
+                        
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
