--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,8 @@
 {% load static %}
 {% block headers %}
 <link rel="stylesheet" href="{% static 'css/home.css' %}">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/4.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.6.1/jquery.waypoints.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
 {% endblock headers %}
 {% block content %}
@@ -12,8 +12,8 @@
     <div class="row h-90">
         <div class="main-header">
             <div class="col-lg-12 col-md-12 col-sm-12">
-                <h1 class="font-weight-light display-2"><span class="headerone">Germany Arbite</span></h1>
-                <h3 class="font-weight-light display-5"><span class="headerone">{% trans "We are a liders in Humanresources. We provide best services for all employees and employers" %}</span></h3>
+                <h1 class="font-weight-light"><span class="headerone">Germany Arbite</span></h1>
+                <h3 class="font-weight-light"><span class="headerone">{% trans "We are a liders in Humanresources. We provide best services for all employees and employers" %}</span></h3>
 
             </div>
         </div>
@@ -30,24 +30,25 @@
             <img class="card-img-top mx-auto" style="width:250px; height:250px;" src="{% static 'img/cv.jpeg' %}" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">{% trans "Applyed CV's we recive" %}</h5>
-                <h6 class="counter">1245</h6>
+                <h6 class="counter">{% trans "Applyed CV number" %}</h6>
             </div>
         </div>
         <div class="card text-center" style="border: none;">
             <img class="card-img-top mx-auto" style="width:250px; height:250px;" src="{% static 'img/clock3.jpeg' %}" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">{% trans "Working Hours we deliver" %}</h5>
-                <h6 class="counter">28216</h6>
+                <h6 class="counter">{% trans "Working Hours number" %}</h6>
             </div>
         </div>
         <div class="card text-center" style="border: none;">
             <img class="card-img-top mx-auto" style="width:250px; height:250px;" src="{% static 'img/sign.jpeg' %}" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">{% trans "Contracts with companys" %}</h5>
-                <h6 class="counter">45</h6>
+                <h6 class="counter">{% trans "Partners number" %}</h6>
             </div>
         </div>
     </div>
+    
 </div>
 
 <script>
